--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "fs": "0.0.1-security",
         "gm": "^1.23.1",
         "jimp": "^0.6.0",
+        "mysql": "^2.16.0",
         "nodemon": "^1.18.10",
         "path": "^0.12.7",
         "pkg": "^4.3.7",
