--- a/tsconfig.json
+++ b/tsconfig.json
@@ -57,8 +57,7 @@
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
 
     //Custom options:
-    "resolveJsonModule": true,
-    "esModuleInterop": true  
+    "resolveJsonModule": true 
   },
   "include": [
     "src/**/*",
