--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "typescript": "^2.6.2"
     },
     "dependencies": {
+        "@types/mysql": "^2.15.5",
         "@types/q": "^1.5.1",
         "@types/request": "^2.48.1",
         "buffer-url": "^1.0.0",
